Fix spacing for even smaller screen

--- a/css/input.scss
+++ b/css/input.scss
@@ -51,8 +51,4 @@
   font-size: x-large;
   padding-top: 0.5rem;
   padding-left: 1rem;
-
-  @media (max-width: 400px) {
-    font-size: large;
-  }
 }
