--- a/css/output.css
+++ b/css/output.css
@@ -523,9 +523,9 @@ video {
   }
 }
 
-@media (min-width: 411px) {
+@media (min-width: 425px) {
   .container {
-    max-width: 411px;
+    max-width: 425px;
   }
 }
 
@@ -561,110 +561,6 @@ video {
 
 .fixed {
   position: fixed;
-}
-
-.absolute {
-  position: absolute;
-}
-
-.relative {
-  position: relative;
-}
-
-.left-32 {
-  left: 8rem;
-}
-
-.left-64 {
-  left: 16rem;
-}
-
-.right-3 {
-  right: 0.75rem;
-}
-
-.right-3\/4 {
-  right: 75%;
-}
-
-.left-3\/4 {
-  left: 75%;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
-.left-1\/3 {
-  left: 33.333333%;
-}
-
-.left-1\/4 {
-  left: 25%;
-}
-
-.left-2\/4 {
-  left: 50%;
-}
-
-.left-2\.5 {
-  left: 0.625rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.-left-96 {
-  left: -24rem;
-}
-
-.left-96 {
-  left: 24rem;
-}
-
-.right-9 {
-  right: 2.25rem;
-}
-
-.right-1\/4 {
-  right: 25%;
-}
-
-.right-1\/2 {
-  right: 50%;
-}
-
-.-right-1\/2 {
-  right: -50%;
-}
-
-.-right-1\/4 {
-  right: -25%;
-}
-
-.left-2\/3 {
-  left: 66.666667%;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.right-1\/3 {
-  right: 33.333333%;
-}
-
-.-right-1\/3 {
-  right: -33.333333%;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-0 {
-  left: 0px;
 }
 
 .isolate {
@@ -719,11 +615,6 @@ video {
   margin-bottom: 2.25rem;
 }
 
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
@@ -740,16 +631,20 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mr-5 {
   margin-right: 1.25rem;
 }
 
 .mt-3 {
   margin-top: 0.75rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mr-2 {
@@ -768,8 +663,8 @@ video {
   margin-bottom: 1rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .block {
@@ -804,20 +699,8 @@ video {
   height: 100%;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
 .h-40 {
   height: 10rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-0 {
-  height: 0px;
 }
 
 .h-screen {
@@ -840,28 +723,8 @@ video {
   width: 8rem;
 }
 
-.w-40 {
-  width: 10rem;
-}
-
 .w-1\/4 {
   width: 25%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.max-w-lg {
-  max-width: 32rem;
 }
 
 .grow {
@@ -1022,14 +885,14 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .py-1 {
@@ -1063,10 +926,6 @@ video {
 
 .pb-10 {
   padding-bottom: 2.5rem;
-}
-
-.pb-56 {
-  padding-bottom: 14rem;
 }
 
 .text-center {
@@ -1107,30 +966,26 @@ video {
   line-height: 1.25rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-medium {
   font-weight: 500;
 }
 
-.uppercase {
-  text-transform: uppercase;
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-neutral-50 {
@@ -1305,33 +1160,78 @@ video {
   color: #ea2027c3;
 }
 
-@media (min-width: 411px) {
-  .xs\:h-1\/2 {
-    height: 50%;
+@media (min-width: 320px) {
+  .xxs\:mr-0 {
+    margin-right: 0px;
   }
 
-  .xs\:w-1\/2 {
-    width: 50%;
+  .xxs\:mr-1 {
+    margin-right: 0.25rem;
   }
 
-  .xs\:w-0 {
-    width: 0px;
+  .xxs\:mr-2 {
+    margin-right: 0.5rem;
+  }
+
+  .xxs\:w-10 {
+    width: 2.5rem;
+  }
+
+  .xxs\:w-8 {
+    width: 2rem;
+  }
+
+  .xxs\:w-6 {
+    width: 1.5rem;
+  }
+
+  .xxs\:w-2 {
+    width: 0.5rem;
+  }
+
+  .xxs\:w-12 {
+    width: 3rem;
+  }
+
+  .xxs\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .xxs\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 425px) {
+  .xs\:mr-2 {
+    margin-right: 0.5rem;
+  }
+
+  .xs\:h-14 {
+    height: 3.5rem;
+  }
+
+  .xs\:h-16 {
+    height: 4rem;
+  }
+
+  .xs\:w-14 {
+    width: 3.5rem;
+  }
+
+  .xs\:w-16 {
+    width: 4rem;
+  }
+
+  .xs\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
 @media (min-width: 640px) {
-  .sm\:h-3\/4 {
-    height: 75%;
-  }
-
-  .sm\:h-full {
-    height: 100%;
-  }
-
-  .sm\:h-1\/2 {
-    height: 50%;
-  }
-
   .sm\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -1345,14 +1245,13 @@ video {
     font-size: 0.75rem;
     line-height: 1rem;
   }
-
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
 }
 
 @media (min-width: 768px) {
+  .md\:mr-3 {
+    margin-right: 0.75rem;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1361,12 +1260,16 @@ video {
     display: none;
   }
 
-  .md\:h-3\/4 {
-    height: 75%;
+  .md\:h-20 {
+    height: 5rem;
   }
 
   .md\:w-7\/12 {
     width: 58.333333%;
+  }
+
+  .md\:w-20 {
+    width: 5rem;
   }
 
   .md\:w-3\/4 {
@@ -1422,8 +1325,12 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:h-screen {
-    height: 100vh;
+  .xl\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .xl\:mr-3 {
+    margin-right: 0.75rem;
   }
 
   .xl\:w-full {
@@ -1436,11 +1343,6 @@ video {
 
   .xl\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .xl\:text-2xl {
